; ModuleID = '/home/carl/AnghaBench/freebsd/stand/ficl/extr_words.c_accept.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/ficl/extr_words.c_accept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

@VM_RESTART = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*)* @accept to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @accept(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %9 = call i8* @vmGetInBuf(%struct.TYPE_8__* %8)
  store i8* %9, i8** %6, align 8
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %11 = call i8* @vmGetInBufEnd(%struct.TYPE_8__* %10)
  store i8* %11, i8** %7, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = ptrtoint i8* %12 to i64
  %15 = ptrtoint i8* %13 to i64
  %16 = sub i64 %14, %15
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %1
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %22 = load i32, i32* @VM_RESTART, align 4
  %23 = call i32 @vmThrow(%struct.TYPE_8__* %21, i32 %22)
  br label %24

24:                                               ; preds = %20, %1
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @stackPopINT(i32 %27)
  store i32 %28, i32* %3, align 4
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i8* @stackPopPtr(i32 %31)
  store i8* %32, i8** %5, align 8
  %33 = load i32, i32* %3, align 4
  %34 = load i32, i32* %4, align 4
  %35 = icmp slt i32 %33, %34
  br i1 %35, label %36, label %38

36:                                               ; preds = %24
  %37 = load i32, i32* %3, align 4
  br label %40

38:                                               ; preds = %24
  %39 = load i32, i32* %4, align 4
  br label %40

40:                                               ; preds = %38, %36
  %41 = phi i32 [ %37, %36 ], [ %39, %38 ]
  store i32 %41, i32* %4, align 4
  %42 = load i8*, i8** %5, align 8
  %43 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %44 = call i8* @vmGetInBuf(%struct.TYPE_8__* %43)
  %45 = load i32, i32* %4, align 4
  %46 = call i32 @strncpy(i8* %42, i8* %44, i32 %45)
  %47 = load i32, i32* %4, align 4
  %48 = load i8*, i8** %6, align 8
  %49 = sext i32 %47 to i64
  %50 = getelementptr inbounds i8, i8* %48, i64 %49
  store i8* %50, i8** %6, align 8
  %51 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %52 = load i8*, i8** %6, align 8
  %53 = call i32 @vmUpdateTib(%struct.TYPE_8__* %51, i8* %52)
  %54 = load i32, i32* %4, align 4
  %55 = call i32 @PUSHINT(i32 %54)
  ret void
}

declare dso_local i8* @vmGetInBuf(%struct.TYPE_8__*) #1

declare dso_local i8* @vmGetInBufEnd(%struct.TYPE_8__*) #1

declare dso_local i32 @vmThrow(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @stackPopINT(i32) #1

declare dso_local i8* @stackPopPtr(i32) #1

declare dso_local i32 @strncpy(i8*, i8*, i32) #1

declare dso_local i32 @vmUpdateTib(%struct.TYPE_8__*, i8*) #1

declare dso_local i32 @PUSHINT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
